--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <header class="header fixed-top">
 
-<a href="#" class="logo"><img src="images/logo.jpg" alt="">
+<a href="#" class="logo"><img src="images/logo4.jpg" alt="">
   <span class="CompName"> HomeDecor</span></a>
 
 <nav>
