--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <header class="header fixed-top">
 
 <a href="#" class="logo"><img src="images/logo4.jpg" alt="">
-  <span class="CompName"> HomeDecor</span></a>
+  <span class="CompName">SKYBOUND STUDIO</span></a>
 
 <nav>
   <ul>
