--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
   <!-- custom css file link  -->
   <link rel="stylesheet" href="css/style.css">
 
-  <title>HomeDecore</title>
+  <title>Responsive Architechture and Interior Design Website Tutorial</title>
 </head>
-<body>
+<body class="root">
   
 <!-- header section starts  -->
 
 <header class="header fixed-top">
 
-<a href="#" class="logo"><img src="images/logo4.jpg" alt="">
-  <span class="CompName">SKYBOUND STUDIO</span></a>
+<a href="#" class="logo"><img src="images/logo4.jpg" alt="">   
+  <span class="CompName">  THE SKYBOUND STUDIO</span></a>
 
 <nav>
   <ul>
@@ -43,8 +43,8 @@
 </nav>
 
 <div class="contact-info">
-    <a href="#" class="logo"><img src="images/call5.jpg" alt=""><span class="info"> - +91 9876543210</span></a>
-    <a href="#" class="logo"><img src="images/email.jpg" alt=""><span class="info"> - thisisjusttrial@gmail.com</span></a>
+    <a href="#" class="logo"><img src="images/call8.jpg" alt=""><span class="info">  +91 9876543210</span></a>
+    <a href="#" class="logo"><img src="images/email1.jpg" alt=""><span class="info">  thisisjusttrial@gmail.com</span></a>
 </div> 
 
 <div class="fas fa-bars"></div>
@@ -111,7 +111,7 @@
       <span class="glyphicon glyphicon-chevron-right"></span>
       <span class="sr-only">Next</span>
     </a>
-
+  </div>
     </div>
 
     <div class="counting">
@@ -135,7 +135,7 @@
             <h1 class="count" data-count="10">10+</h1>
             <h3>projects</h3>
           </div>
-    </div>
+    
   </div>
 
 </section>
